--- a/app/src/main/res/values/strings_preview.xml
+++ b/app/src/main/res/values/strings_preview.xml
@@ -22,6 +22,9 @@
     <string name="preview_rank_text" translatable="false">Тексты: 1</string>
     <string name="preview_rank_roll" translatable="false">Списки: 10</string>
 
+    <string name="preview_notification_name" translatable="false">Обязательно сделать</string>
+    <string name="preview_notification_date" translatable="false">25 авг. 2020г в 10:30</string>
+
     <string name="preview_sort_text" translatable="false">Сортируй как хочешь</string>
 
     <!-- Activity develop test -->
