--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical">
 
     <include layout="@layout/include_toolbar"/>
 
-    <TextView android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center"
-              android:text="Notification activity"
-              android:textSize="28sp"/>
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/notification_recycler"
+            style="@style/RecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_notification"/>
 
 </LinearLayout>
