--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -22,7 +22,7 @@
         <item name="android:scrollbars">vertical</item>
     </style>
 
-    <!-- -->
+    <!-- Divider -->
 
     <style name="Divider">
         <item name="android:background">?attr/clDivider</item>
@@ -38,7 +38,7 @@
         <item name="android:layout_height">match_parent</item>
     </style>
 
-    <!-- -->
+    <!-- Container -->
 
     <style name="Container"/>
 
@@ -79,7 +79,7 @@
         <item name="android:scrollbars">none</item>
     </style>
 
-    <!-- -->
+    <!-- Text -->
 
     <style name="Text"/>
 
@@ -105,9 +105,9 @@
         <item name="android:textSize">@dimen/text_14sp</item>
     </style>
 
-    <style name="Text.RankItem"/>
+    <style name="Text.SmallCard"/>
 
-    <style name="Text.RankItem.Name">
+    <style name="Text.SmallCard.Title">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">@dimen/layout_8dp</item>
@@ -117,7 +117,7 @@
         <item name="android:textSize">@dimen/text_16sp</item>
     </style>
 
-    <style name="Text.RankItem.Info">
+    <style name="Text.SmallCard.Subtitle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:ellipsize">start</item>
@@ -207,7 +207,7 @@
         <item name="android:textIsSelectable">true</item>
     </style>
 
-    <!-- -->
+    <!-- EditText -->
 
     <style name="EditText" parent="Widget.AppCompat.EditText">
         <item name="android:textColor">?attr/clContent</item>
@@ -280,7 +280,7 @@
         <item name="android:textColorHint">?attr/clContentSecond</item>
     </style>
 
-    <!-- -->
+    <!-- Button -->
 
     <style name="Button"/>
 
@@ -295,7 +295,7 @@
         <item name="android:padding">@dimen/layout_8dp</item>
     </style>
 
-    <style name="Button.RankItem">
+    <style name="Button.Medium">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
@@ -319,7 +319,7 @@
     </style>
 
 
-    <!-- -->
+    <!-- Image -->
 
     <style name="Image"/>
 
