Добавил парсинг времени к карточке уведомления
Tag: @New

--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -42,7 +42,7 @@
                         style="@style/Text.SmallCard.Subtitle"
                         android:layout_marginEnd="@dimen/layout_4dp"
                         android:layout_marginRight="@dimen/layout_4dp"
-                        android:text='@{notificationItem.date}'
+                        app:time='@{notificationItem.date}'
                         tools:text="@string/preview_notification_date"/>
 
             </LinearLayout>
