--- a/app/src/main/res/layout-v21/include_toolbar_rank.xml
+++ b/app/src/main/res/layout-v21/include_toolbar_rank.xml
@@ -26,9 +26,13 @@
                 app:contentInsetStart="@dimen/layout_8dp"
                 app:popupTheme="?attr/themePopup">
 
+            <!-- focusable/InTouchMode для отведения фокуса от EditText при скрытии клавиатуры -->
             <androidx.cardview.widget.CardView
+                    android:id="@+id/toolbar_rank_card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     app:cardBackgroundColor="?attr/clBackgroundEnter"
                     app:cardCornerRadius="@dimen/radius_8dp"
                     app:cardUseCompatPadding="false">
@@ -66,10 +70,10 @@
                             android:id="@+id/toolbar_rank_add_button"
                             style="@style/Button.Small"
                             android:contentDescription="@null"
-                            app:srcCompat="@drawable/ic_rank"
                             app:boolExpression='@{enableAdd}'
                             app:enabled='@{enableAdd}'
                             app:falseColor='@{R.attr.clDisable}'
+                            app:srcCompat="@drawable/ic_rank"
                             app:trueColor='@{R.attr.clAccent}'
                             tools:tint="?attr/clAccent"/>
 
