--- a/app/src/main/res/values/values_app.xml
+++ b/app/src/main/res/values/values_app.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Date Formats -->
-    <string name="date_app_format" translatable="false">yyyy-MM-dd HH:mm:ss</string>
-    <string name="date_note_today_format" translatable="false">HH:mm</string>
-    <string name="date_note_yesterday_format" translatable="false">d MMM yyyy</string>
+    <!-- Time format -->
 
-    <!-- TODO Добавить для вчерашнего формата: (Вчера 10:30), для более раннего но этого же года: (10 апр), для совсем древних: (10 апр 1921) -->
+    <string name="date_app_format" translatable="false">yyyy-MM-dd HH:mm:ss</string>
+
+    <string name="format_time_am" translatable="false">h:mm a</string>
+    <string name="format_time" translatable="false">HH:mm</string>
+    <string name="format_date_medium" translatable="false">d MMM</string>
+    <string name="format_date_short" translatable="false">dd.MM.yy</string>
 
     <!-- Text length -->
+
     <integer name="length_note_name">30</integer>
     <integer name="length_rank_name">30</integer>
 
