Убрал кнопку "Un/checkAll", добавил функцию долгого нажатия на галочку
Tag: @New

--- a/app/src/main/res/layout/include_roll_note_panel.xml
+++ b/app/src/main/res/layout/include_roll_note_panel.xml
@@ -8,7 +8,6 @@
 
         <import type="sgtmelon.scriptum.R"/>
         <import alias="v" type="android.view.View"/>
-        <import alias="noteType" type="sgtmelon.scriptum.model.key.NoteType"/>
 
         <variable name="menuCallback" type="sgtmelon.scriptum.screen.callback.note.roll.RollNoteMenuCallback"/>
         <variable name="rankEmpty" type="boolean"/>
@@ -147,33 +146,20 @@
                     tools:visibility="invisible">
 
                 <ImageButton
-                        android:id="@+id/note_panel_check_button"
-                        style="@style/Button.Small"
-                        android:contentDescription='@{noteItem.allCheck ? @string/menu_note_check_zero : @string/menu_note_check_all}'
-                        android:onClick='@{() -> menuCallback.onMenuCheck()}'
-                        android:visibility='@{noteItem.type == noteType.ROLL ? v.VISIBLE : v.GONE}'
-                        app:boolExpression='@{noteItem.allCheck}'
-                        app:falseColor='@{R.attr.clContent}'
-                        app:srcCompat="@drawable/ic_check_all"
-                        app:trueColor='@{R.attr.clAccent}'
-                        tools:tint="?attr/clAccent"/>
-
-                <ImageButton
                         android:id="@+id/note_panel_bind_button"
                         style="@style/Button.Small"
                         android:contentDescription="@string/menu_note_status_bind"
                         android:onClick='@{() -> menuCallback.onMenuBind()}'
-                        android:src='@{noteItem.type == noteType.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
+                        app:srcCompat="@drawable/ic_bind_roll"
                         app:boolExpression='@{noteItem.status}'
                         app:falseColor='@{R.attr.clContent}'
                         app:trueColor='@{R.attr.clAccent}'
-                        tools:srcCompat="@drawable/ic_bind_roll"
                         tools:tint="?attr/clAccent"/>
 
                 <ImageButton
                         android:id="@+id/note_panel_convert_button"
                         style="@style/Button.Small"
-                        android:contentDescription='@{noteItem.type == noteType.TEXT ? @string/menu_note_convert_to_roll : @string/menu_note_convert_to_text}'
+                        android:contentDescription="@string/menu_note_convert_to_text"
                         android:onClick='@{() -> menuCallback.onMenuConvert()}'
                         android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_convert"/>
