--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -28,6 +28,8 @@
             <sgtmelon.iconanim.widget.SwitchButton
                     android:id="@+id/rank_visible_button"
                     style="@style/Button.Medium"
+                    android:layout_marginStart="@dimen/layout_4dp"
+                    android:layout_marginLeft="@dimen/layout_4dp"
                     android:layout_marginEnd="@dimen/layout_8dp"
                     android:layout_marginRight="@dimen/layout_8dp"
                     app:srcDisable="@drawable/ic_visible_enter"
@@ -42,6 +44,10 @@
             <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/layout_4dp"
+                    android:layout_marginLeft="@dimen/layout_4dp"
+                    android:layout_marginEnd="@dimen/layout_4dp"
+                    android:layout_marginRight="@dimen/layout_4dp"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
@@ -78,6 +84,8 @@
                     style="@style/Button.Medium"
                     android:layout_marginStart="@dimen/layout_8dp"
                     android:layout_marginLeft="@dimen/layout_8dp"
+                    android:layout_marginEnd="@dimen/layout_4dp"
+                    android:layout_marginRight="@dimen/layout_4dp"
                     android:contentDescription="@null"
                     android:tint="?attr/clContent"
                     app:srcCompat="@drawable/ic_cancel_enter"/>
