--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import alias="def" type="sgtmelon.scriptum.office.annot.def.ThemeDef"/>
+
         <variable name="noteModel" type="sgtmelon.scriptum.model.NoteModel"/>
 
     </data>
@@ -12,7 +14,7 @@
     <androidx.cardview.widget.CardView
             android:id="@+id/rank_parent_card"
             style="@style/Card"
-            app:cardBackgroundColor="?attr/clBackgroundView"
+            app:cardBackgroundColor="?attr/clPrimary"
             app:cardCornerRadius="@dimen/radius_4dp"
             app:cardUseCompatPadding="false">
 
@@ -25,10 +27,22 @@
                 android:padding="@dimen/layout_8dp"
                 android:weightSum="1">
 
+            <ImageView
+                    android:id="@+id/notification_color_view"
+                    style="@style/Image.Color.Vertical.Start"
+                    android:contentDescription="@null"
+                    app:indicatorColor='@{noteModel.noteItem.color}'
+                    tools:tint="@color/note_green_dark"
+                    tools:visibility="visible"/>
+
             <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginStart="@dimen/layout_4dp"
+                    android:layout_marginLeft="@dimen/layout_4dp"
+                    android:layout_marginEnd="@dimen/layout_4dp"
+                    android:layout_marginRight="@dimen/layout_4dp"
                     android:orientation="vertical">
 
                 <TextView
@@ -52,6 +66,8 @@
                     style="@style/Button.Medium"
                     android:layout_marginStart="@dimen/layout_8dp"
                     android:layout_marginLeft="@dimen/layout_8dp"
+                    android:layout_marginEnd="@dimen/layout_4dp"
+                    android:layout_marginRight="@dimen/layout_4dp"
                     android:contentDescription="@null"
                     android:tint="?attr/clContent"
                     app:srcCompat="@drawable/ic_cancel_enter"/>
