--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -23,22 +23,27 @@
             style="@style/RecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            tools:alpha="0.5"
             tools:itemCount="1"
-            tools:listitem="@layout/item_note_roll"/>
+            tools:listitem="@layout/item_note_roll"
+            tools:visibility="visible"/>
 
     <LinearLayout
             android:id="@+id/alarm_button_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            tools:alpha="0.5"
+            tools:visibility="visible">
 
         <Button
                 android:id="@+id/alarm_disable_button"
