--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -68,7 +68,7 @@
 
                 </LinearLayout>
 
-                <ImageView
+                <View
                         android:id="@+id/note_roll_color_view"
                         style="@style/Image.Color.Vertical.End"
                         android:contentDescription="@null"
