--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -52,7 +52,7 @@
 
                 </LinearLayout>
 
-                <ImageView
+                <View
                         android:id="@+id/note_text_color_view"
                         style="@style/Image.Color.Vertical.End"
                         android:contentDescription="@null"
