--- a/app/src/main/res/drawable/ic_color.xml
+++ b/app/src/main/res/drawable/ic_color.xml
@@ -3,11 +3,7 @@
        android:shape="oval">
 
     <solid android:color="#FFFFFF"/>
-    <stroke
-            android:width="1dp"
-            android:color="#000000"/>
-    <size
-            android:width="24dp"
-            android:height="24dp"/>
+    <stroke android:width="1dp" android:color="#000000"/>
+    <size android:width="24dp" android:height="24dp"/>
 
 </shape>
