--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -27,22 +27,21 @@
                 android:padding="@dimen/layout_8dp"
                 android:weightSum="1">
 
-            <ImageView
+            <View
                     android:id="@+id/notification_color_view"
                     style="@style/Image.Color.Vertical.Start"
                     android:contentDescription="@null"
                     app:indicatorColor='@{noteModel.noteItem.color}'
-                    tools:tint="@color/note_green_dark"
                     tools:visibility="visible"/>
 
             <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginStart="@dimen/layout_4dp"
                     android:layout_marginLeft="@dimen/layout_4dp"
                     android:layout_marginEnd="@dimen/layout_4dp"
                     android:layout_marginRight="@dimen/layout_4dp"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
                 <TextView
