--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -340,9 +340,9 @@
     <style name="Image.Color"/>
 
     <style name="Image.Color.Vertical">
-        <item name="android:layout_width">@dimen/layout_4dp</item>
+        <item name="android:layout_width">@dimen/layout_8dp</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:src">@drawable/ic_color_indicator</item>
+        <item name="android:background">@drawable/ic_color_indicator</item>
     </style>
 
     <style name="Image.Color.Vertical.Start">
