--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <variable name="currentTheme" type="int"/>
+
         <variable name="menuCallback"
                   type="sgtmelon.scriptum.screen.callback.note.roll.RollNoteMenuCallback"/>
         <variable name="rankEmpty" type="boolean"/>
@@ -27,6 +29,7 @@
 
         <include
                 layout="@layout/include_toolbar_note"
+                app:currentTheme='@{currentTheme}'
                 app:editMode='@{editMode}'
                 app:noteItem='@{noteItem}'/>
 
