--- a/app/src/main/res/layout/include_info.xml
+++ b/app/src/main/res/layout/include_info.xml
@@ -21,8 +21,8 @@
                 android:id="@+id/info_image"
                 style="@style/Image.Info"
                 android:contentDescription="@null"
-                app:imageColor='@{R.attr.clContent}'
-                app:imageId='@{icon}'
+                app:colorAttr='@{R.attr.clContent}'
+                app:drawableId='@{icon}'
                 tools:srcCompat="@mipmap/img_info_notes"
                 tools:tint="?attr/clContent"/>
 
