--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <import alias="def" type="sgtmelon.scriptum.office.annot.def.ThemeDef"/>
+        <import alias="def" type="sgtmelon.scriptum.model.annotation.Theme"/>
 
         <variable name="currentTheme" type="int"/>
         <variable name="noteModel" type="sgtmelon.scriptum.model.NoteModel"/>
